# swaggy-crows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/swagger/: README.md
docs/swagger/static/: oapi.yaml  swagger-initializer.js
docs/swagger/templates/: swagger.html
swaggy_crows/include/: blueprints.hpp
swaggy_crows/src/: CMakeLists.txt  swaggy_crows.cpp
swaggy_crows/src/blueprints/: CMakeLists.txt  swagger.cpp
